--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@
     border: 1px solid rgb(0,0,0);
     border-radius: 360px;
 }
-header {
+.header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
+    flex-wrap: wrap-reverse;
+    width: 100%;
+    height: auto;
 }
 nav {
     display: flex;
@@ -36,6 +38,8 @@ h1{
 }
 body {
     background-color: rgb(16, 113, 192);
+    width: 100%;
+    height: 100%;
 }
 .headline {
     border: solid springgreen 1px;
