--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ footer {
     align-items: center;
 }
 main{
-    font-family: Comic Sans MS, Comic Sans, cursive;
+    font-family: 'Comic Neue', cursive;
 
 }
 h1{
